# Django-Hierarchical-Permissions

./: manage.py  pyproject.toml
core/management/commands/: seed.py
djangoHierarchicalPermissions/: asgi.py  settings.py  urls.py  wsgi.py
permissions/: constants.py  decorators.py  form.py  mixins.py  models.py  services.py  utils.py
permissions_test/: admin.py  apps.py  models.py  rules.py  seed.py  tests.py
permissions_test/tests/: base.py  test_regular_model_permissions.py  test_regular_object_permissions.py
