[project]
name = "djangohierarchicalpermissions"
version = "0.1.0"
description = ""
authors = [
    {name = "JakubJakacki18",email = "jakub.jakacki18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "rules (>=3.5,<4.0)",
    "django-mptt (>=0.17.0,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
